@@ -1,44 +1,0 @@
-/*                          C O N F . H
- * BRL-CAD
- *
- * Copyright (c) 1993-2016 United States Government as represented by
- * the U.S. Army Research Laboratory.
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public License
- * version 2.1 as published by the Free Software Foundation.
- *
- * This library is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this file; see the file named COPYING for more
- * information.
- */
-/** @addtogroup deprecated */
-/** @{ */
-/** @file conf.h
- *
- * @deprecated
- * The conf.h header is deprecated -- use common.h instead
- */
-#ifndef CONF_H
-#define CONF_H
-
-#warning "The conf.h header is deprecated -- use common.h instead"
-
-#include "common.h"
-
-#endif /* CONF_H */
-/** @} */
-/*
- * Local Variables:
- * mode: C
- * tab-width: 8
- * indent-tabs-mode: t
- * c-file-style: "stroustrup"
- * End:
- * ex: shiftwidth=4 tabstop=8
- */
